// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader should have same "contenthash" with "css-loader" and with source maps: errors 1`] = `Array []`;

exports[`loader should have same "contenthash" with "css-loader" and with source maps: module 1`] = `
Array [
  "main.54b9712c1981e48c12c4.bundle.js",
]
`;

exports[`loader should have same "contenthash" with "css-loader" and with source maps: warnings 1`] = `Array []`;

exports[`loader should have same "contenthash" with "css-loader" and without source maps: errors 1`] = `Array []`;

exports[`loader should have same "contenthash" with "css-loader" and without source maps: module 1`] = `
Array [
  "main.b38d5f87c88c55a4258e.bundle.js",
]
`;

exports[`loader should have same "contenthash" with "css-loader" and without source maps: warnings 1`] = `Array []`;

exports[`loader should have same "contenthash" with "postcss-loader" and with source maps: errors 1`] = `Array []`;

exports[`loader should have same "contenthash" with "postcss-loader" and with source maps: module 1`] = `
Array [
  "main.d77dd6564bc6e6297cd4.bundle.js",
]
`;

exports[`loader should have same "contenthash" with "postcss-loader" and with source maps: warnings 1`] = `Array []`;

exports[`loader should have same "contenthash" with "postcss-loader" and without source maps: errors 1`] = `Array []`;

exports[`loader should have same "contenthash" with "postcss-loader" and without source maps: module 1`] = `
Array [
  "main.f8e62206a43c13393798.bundle.js",
]
`;

exports[`loader should have same "contenthash" with "postcss-loader" and without source maps: warnings 1`] = `Array []`;

exports[`loader should have same "contenthash" with "sass-loader" and with source maps: errors 1`] = `Array []`;

exports[`loader should have same "contenthash" with "sass-loader" and with source maps: module 1`] = `
Array [
  "main.151589c7e12ebfd445e7.bundle.js",
]
`;

exports[`loader should have same "contenthash" with "sass-loader" and with source maps: warnings 1`] = `Array []`;

exports[`loader should have same "contenthash" with "sass-loader" and without source maps: errors 1`] = `Array []`;

exports[`loader should have same "contenthash" with "sass-loader" and without source maps: module 1`] = `
Array [
  "main.9ae036ace8bbbebbd185.bundle.js",
]
`;

exports[`loader should have same "contenthash" with "sass-loader" and without source maps: warnings 1`] = `Array []`;
